add ChooseAvatarActivity, app crashes when jumping to this activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
             android:name=".activity.AddContactActivity"
             android:label="@string/title_activity_add_contact" >
         </activity>
+        <activity
+            android:name=".ImageAdapter"
+            android:label="@string/title_activity_choose_avatar" >
+        </activity>
+        <activity
+            android:name=".activity.ChooseAvatarActivity"
+            android:label="@string/title_activity_choose_avatar" >
+        </activity>
     </application>
 
 </manifest>
