--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="qilin.caiqiaolinpan" >
+    package="qilin.caiqiaolinpan">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,20 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PersonalDetail"
-            android:label="@string/title_activity_personal_detail" />
-        <activity
             android:name=".activity.AddContactActivity"
-            android:label="@string/title_activity_add_contact" >
-        </activity>
-        <activity
-            android:name=".ImageAdapter"
-            android:label="@string/title_activity_choose_avatar" >
-        </activity>
+            android:label="@string/title_activity_add_contact"></activity>
         <activity
             android:name=".activity.ChooseAvatarActivity"
-            android:label="@string/title_activity_choose_avatar" >
-        </activity>
+            android:label="@string/title_activity_choose_avatar"></activity>
     </application>
 
 </manifest>
